--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,10 @@ jobs:
         run: npm ci
 
       - name: Build (sets correct base for GitHub Pages project path)
-        run: npm run build -- --base=/${{ github.event.repository.name }}/
+        run: npm run build -- --base=/mtssplain/
+
+      - name: Add SPA fallback
+        run: cp dist/index.html dist/404.html
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
